# ok-image-picker

./: README.md  manifest.json
backend/: Cargo.toml  backup.rs  build.rs
backend/src/: main.rs
backend/wix/: main.wxs
backend/wix/locales/: zh-CN.wxl
background/: index.js
content/: index.css  index.js
extension/: background.js  manifest.json
extension/assets/: sieve.json
extension/content/: index.css  index.js
extension/popup/: index.css  index.html  index.js
lib/: db.js
popup/: index.css  index.html  index.js
