[package]
name = "ok-image-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde_json = "1.0"
tao = "0.13.3"
image = "0.24.2"
shellexpand = "2.1.2"
native-dialog = "0.6.3"

[features]
default = [ "tray" ]
tray = ["tao/tray"]